nightly failures after JSR 292 lazy method handle update

XMLWordPrintable

    • b20
    • generic
    • generic
    • Not verified

        Nightly testing in hotspot-comp (JDK/NIGHTLY/VM/2012-07-25/Comp_Baseline/) shows several failures after the push of 7023639.

        These consist of some crashes and assertion checks in stress modes.

              Assignee:
              John Rose
              Reporter:
              John Rose
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: