7187290: nightly failures after JSR 292 lazy method handle update

Reviewed-by: kvn, twisti